Fix nested list spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -555,6 +555,12 @@ p, ul, ol, table, pre, dl {
   margin: 0 0 20px;
 }
 
+/* Fix nested lists */
+li > ul,
+li > ol {
+  margin: 0;
+}
+
 h1, h2, h3 {
   line-height: 1.1;
 }
